acs/deploy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: acs-portal
  name: acs-portal
  namespace: argocd
spec:
  replicas: 10
  selector:
    matchLabels:
      app: acs-portal
  strategy:
    canary:
      analysis:
        templates:
        # - templateName: success-rate
        - templateName: error-rate
        args:
        - name: service-name
          value: acs-portal.argocd.svc.cluster.local
      steps:
      - setWeight: 20
      - pause: {duration: 5m}
      - setWeight: 40
      - pause: {duration: 5m}
      - setWeight: 100
      - pause: {duration: 10m}
  template:
    metadata:
      labels:
        app: acs-portal
    spec:
      containers:
      - image: m2pfintech01/acs:portal-dev-v1.0.0
        imagePullPolicy: Always
        name: acs-portal
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 101
          runAsGroup: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: dockerhub
