acs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acs-portal
  name: acs-portal
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: acs-portal
  type: ClusterIP
