acs/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/instance: uat-acs-portal
    app.kubernetes.io/managed-by: Helm
  name: rollout-acs
spec:
  ingressClassName: nginx
  rules:
    - host: dev-monitoring.m2pfintech.com
      http:
        paths:
          - backend:
              service:
                name: acs-portal
                port:
                  number: 8080
            path: /(.*)
            pathType: Prefix
